# slynx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md  build.rs  logs.txt  test_prop.slx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussuion.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
.kilo/plans/: 1775335746984-playful-forest.md  (+2 more)
docs/: capabilities-system.md  first-slynx-file.md  grammar.md  landing-content-inventory.md  lanes.md  language-surface.md  move-semantics.md  stylesheets.md  typestate.md
examples/: If.slynx  common_comments.slynx  component.slynx  component_type_mismatch.slynx  functionCall.syx  ifExpression.syx  number_systems.slynx  stylesheet_test.slx  tuplas.syx  tuple_access.slynx  variables.slynx  while.slynx
middleend/: Cargo.toml  README.md
slynx/: If.js  If.slynx  booleans.hir  booleans.ir  booleans.js  booleans.slynx  component.hir  component.js  component.slynx  enum.slynx  finaltest.slynx  functioncall.js  functioncall.slynx  macro.js  macro.slynx  objects.js  objects.slynx  tuplas.sir  tuplas.sly  variables.js  variables.slynx
src/: context.rs  lib.rs  main.rs
tests/: booleans.rs  common_comments.rs  compilation_output.rs  component_properties.rs  component_type_mismatch.rs  enum.rs  functioncall_extra_arg.rs  functioncall_missing_arg.rs  if_expression.rs  macro.rs  monomorphizer.rs  my_components.rs  number_systems.rs  objects.rs  parser.rs  stylesheet_uses.rs  tuples.rs  type_checker.rs  variable.rs  while.rs
(+377 files in other folders)
