[package]
name = "slynx"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
smallvec = "1.15.1"
color-eyre = "0.6.5"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
color-eyre={workspace=true}
middleend = {path="./middleend"}
frontend = {path="./frontend"}

[workspace]
members = [
  ".",
  "middleend",
  "frontend",
]
